--- a/initial_processing.ipynb
+++ b/initial_processing.ipynb
@@ -1878,6 +1878,17 @@
     }
    ],
    "execution_count": 193
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Save the cleaned dataframe to a new CSV file\n",
+    "df.to_csv(\"cleaned_logistics_data.csv\", index=False)"
+   ],
+   "id": "f9fdbba54b6684cf"
   }
  ],
  "metadata": {
